--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </script>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOnUBcLX02oRYFR9sLrBISoOgOz9ziliU&callback=initMap">
   </script>
 </body>
 </html>
