--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: #f0f2f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     header {
       padding: 20px;
@@ -15,24 +18,35 @@
       background: #2c3e50;
       color: white;
       font-size: 24px;
+      width: 50%;
+      margin-top: 20px;
     }
-    .container {
-      max-width: 1200px;
-      margin: 30px auto;
-      padding: 0 20px;
+    .main-container {
+      width: 50%;
+      margin: 20px auto;
+      display: flex;
+      flex-direction: column;
+    }
+    .selection-container {
+      width: 100%;
+      margin-bottom: 15px;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
     }
     select {
       padding: 10px;
       font-size: 16px;
       width: 100%;
-      max-width: 300px;
       border-radius: 5px;
       border: 1px solid #ccc;
-      margin-bottom: 20px;
+      box-sizing: border-box;
     }
     #map {
       width: 100%;
-      height: 300px;
+      height: 400px;
       border-radius: 10px;
       border: 2px solid #ccc;
     }
@@ -57,11 +71,13 @@
 </head>
 <body>
   <header>📍 Lokacije Prodavnica</header>
-  <div class="container">
-    <label for="citySelect">Izaberi grad:</label><br>
-    <select id="citySelect">
-      <option value="all">-- Prikaži sve --</option>
-    </select>
+  <div class="main-container">
+    <div class="selection-container">
+      <label for="citySelect">Izaberi grad:</label>
+      <select id="citySelect">
+        <option value="all">-- Prikaži sve --</option>
+      </select>
+    </div>
     <div id="map"></div>
   </div>
 
